--- a/Documentation/blog-vertical-light.html
+++ b/Documentation/blog-vertical-light.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- Title -->
-    <title>Sukces - Neat Personal Resume CV vCard Template</title>
+    <title>Hessal | Hessal LPG Solutions</title>
 
     <!-- Favicons -->
     <link rel="shortcut icon" href="assets/img/favicon.png">
