Animation.js file added

--- a/Documentation/index.html
+++ b/Documentation/index.html
@@ -23,6 +23,7 @@
 
     <!-- CSS Styles -->
     <link rel="stylesheet" href="assets/css/styles.css" />
+    <link rel="stylesheet" href="test.css">
 
     <!-- CSS Theme -->
     <link id="theme" rel="stylesheet" href="assets/css/themes/theme-sans_serif-orange.css" />
@@ -82,13 +83,196 @@
             <div class="bg-image bg-fixed"><img src="assets/img/photos/manager_bg01.jpg" alt=""></div>
 
             <div class="container container-custom v-center" data-local-scroll>
-                <h1 class="text-lg mb-0"><em>Hi! We</em> are Hessal Solutions!</h1>
-                <p class="lead text-muted">LPG Gas Installers & Specialists</p>
+                <h1 class="text-lg mb-0">
+                    <div><em>Hi! We are</em>
+                        <h1 class="who-we-are">Hessal Solutions!
+                        </h1>
+                    </div>
+                </h1>
+                <p class="lead text-muted">Liquefied Petroleum Gas (LPG) Installers & Specialists</p>
                 <a href="#resume" class="btn btn-primary btn-lg">Who we are?</a>
                 <a href="#portfolio" class="btn btn-link btn-lg">Our Services</a>
                 <a href="#resume" class="btn btn-primary btn-lg">Our Projects</a>
                 <a href="#portfolio" class="btn btn-link btn-lg">Reach Out</a>
                 <a href="#resume" class="btn btn-primary btn-lg">Learn about LPG</a>
+            </div>
+
+        </section>
+
+        <!-- Section - Resume -->
+        <section id="resume" class="section dark bg-dark">
+
+            <div class="container container-custom">
+                <p class="lead text-muted mb-80">Aliquam nec lacus sollicitudin, ornare arcu at, tempor dolor. Quisque
+                    dapibus libero nec turpis molestie auctor. Quisque dapibus nisl enim, consequat blandit purus
+                    porttitor elementum. Maecenas placerat dapibus ullamcorper.</p>
+
+                <div class="row masonry long-spaces">
+                    <div class="masonry-sizer col-sm-6 col-xs-12"></div>
+                    <!-- Specialities -->
+                    <div class="masonry-item col-sm-6 col-xs-12">
+                        <div class="resume-card">
+                            <h3 class="title text-muted">My Specialities</h3>
+                            <div class="row">
+                                <div class="col-lg-6">
+                                    <!-- Feature -->
+                                    <div class="feature feature-2">
+                                        <span class="icon icon-primary"><i class="pe-7s-browser"></i></span>
+                                        <div class="feature-content">
+                                            <h4>Web App</h4>
+                                        </div>
+                                    </div>
+                                    <!-- Feature -->
+                                    <div class="feature feature-2">
+                                        <span class="icon icon-primary"><i class="pe-7s-phone"></i></span>
+                                        <div class="feature-content">
+                                            <h4>Mobile Apps</h4>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-lg-6">
+                                    <!-- Feature -->
+                                    <div class="feature feature-2">
+                                        <span class="icon icon-primary"><i class="pe-7s-monitor"></i></span>
+                                        <div class="feature-content">
+                                            <h4>Webdesign</h4>
+                                        </div>
+                                    </div>
+                                    <!-- Feature -->
+                                    <div class="feature feature-2">
+                                        <span class="icon icon-primary"><i class="pe-7s-chat"></i></span>
+                                        <div class="feature-content">
+                                            <h4>Social Media</h4>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Skills -->
+                    <div class="masonry-item col-sm-6 col-xs-12">
+                        <div class="resume-card">
+                            <h3 class="title text-muted">Skills</h3>
+                            <!-- Skill -->
+                            <div class="skill">
+                                <div class="progress">
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="85"></div>
+                                </div>
+                                <h5>Adobe Photoshop / Sketch</h5>
+                            </div>
+                            <!-- Skill -->
+                            <div class="skill">
+                                <div class="progress">
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="90"></div>
+                                </div>
+                                <h5>HTML / CSS</h5>
+                            </div>
+                            <!-- Skill -->
+                            <div class="skill">
+                                <div class="progress">
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="75"></div>
+                                </div>
+                                <h5>JavaScript</h5>
+                            </div>
+                            <!-- Skill -->
+                            <div class="skill">
+                                <div class="progress">
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="60"></div>
+                                </div>
+                                <h5>AgnularJS</h5>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Languages -->
+                    <div class="masonry-item col-sm-6 col-xs-12">
+                        <div class="resume-card">
+                            <h3 class="title">Languages</h3>
+                            <!-- Skill -->
+                            <div class="skill">
+                                <div class="progress">
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="100"></div>
+                                </div>
+                                <h5>Polish</h5>
+                            </div>
+                            <!-- Skill -->
+                            <div class="skill">
+                                <div class="progress">
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="90"></div>
+                                </div>
+                                <h5>English</h5>
+                            </div>
+                            <!-- Skill -->
+                            <div class="skill">
+                                <div class="progress">
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="60"></div>
+                                </div>
+                                <h5>Spanish</h5>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Educatin & Jobs -->
+                    <div class="masonry-item col-sm-6 col-xs-12">
+                        <div class="resume-card">
+                            <h3 class="title text-muted">Education &amp; Jobs</h3>
+                            <div class="timeline">
+                                <!-- Event-->
+                                <div class="timeline-event animated">
+                                    <div class="content">
+                                        <span class="date">08.2010 - 09.2011</span>
+                                        <h4>Front-End Developer</h4>
+                                        <span class="caption">Envato, Sydney, Australia</span>
+                                    </div>
+                                </div>
+                                <!-- Event-->
+                                <div class="timeline-event animated">
+                                    <div class="content">
+                                        <img src="assets/img/photos/london.jpg" alt="" class="img-rounded">
+                                        <span class="date">08.2010 - 09.2011</span>
+                                        <h4>Webdesigner &amp; Front End Developer</h4>
+                                        <span class="caption">Envato, Sydney, Australia</span>
+                                    </div>
+                                </div>
+                                <!-- Event-->
+                                <div class="timeline-event animated">
+                                    <div class="content">
+                                        <span class="date">08.2010 - 09.2011</span>
+                                        <h4>Front-End Developer</h4>
+                                        <span class="caption">Envato, Sydney, Australia</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Hobbies -->
+                    <div class="masonry-item col-sm-6 col-xs-12">
+                        <div class="resume-card">
+                            <h3 class="title text-muted">Hobbies &amp; Interests</h3>
+                            <div class="row">
+                                <div class="col-sm-4">
+                                    <!-- Feature -->
+                                    <div class="feature feature-1 text-center">
+                                        <span class="icon icon-primary"><i class="pe-7s-bicycle"></i></span>
+                                        <h4>Sport</h4>
+                                    </div>
+                                </div>
+                                <div class="col-sm-4">
+                                    <!-- Feature -->
+                                    <div class="feature feature-1 text-center">
+                                        <span class="icon icon-primary"><i class="pe-7s-headphones"></i></span>
+                                        <h4>Music</h4>
+                                    </div>
+                                </div>
+                                <div class="col-sm-4">
+                                    <!-- Feature -->
+                                    <div class="feature feature-1 text-center">
+                                        <span class="icon icon-primary"><i class="pe-7s-rocket"></i></span>
+                                        <h4>Travelling</h4>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
 
         </section>
@@ -651,6 +835,13 @@
 
     <!-- JS Libraries -->
     <script src="assets/js/jquery-1.12.4.min.js"></script>
+    <script src="assets/js/animation.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
+
+    <!-- SLIDER REVOLUTION -->
+    <script src="assets/js/rev-slider/jquery.themepunch.tools.min.js"></script>
+    <script src="assets/js/rev-slider/jquery.themepunch.revolution.min.js"></script>
+
 
     <!-- JS Plugins -->
     <script src="assets/js/plugins.js"></script>
