--- a/Documentation/index.html
+++ b/Documentation/index.html
@@ -40,7 +40,6 @@
         </svg>
     </div>
     <!-- Loader / End -->
-    resume
     <!-- Header -->
     <header id="header" class="header-vertical light">
 
@@ -56,7 +55,7 @@
                 <li><a href="#about"><i class="pe-7s-ribbon"></i><span>About Us</span></a></li>
                 <li><a href="#our-services"><i class="pe-7s-monitor"></i><span>Our Services</span></a></li>
                 <li><a href="#projects"><i class="pe-7s-comment"></i><span>Projects</span></a></li>
-                <li><a href="#blog"><i class="pe-7s-copy-file"></i><span>Blog</span></a></li>
+                <li><a href="#knowledge"><i class="pe-7s-copy-file"></i><span>Knowledge</span></a></li>
                 <li><a href="#contact"><i class="pe-7s-mail"></i><span>Contact Us</span></a></li>
             </ul>
             <span class="selector"></span>
@@ -93,9 +92,9 @@
                 <p class="lead text-muted">Liquefied Petroleum Gas (LPG) Installers & Specialists</p>
                 <a href="#about" class="btn btn-primary btn-lg">Who we are?</a>
                 <a href="#our-services" class="btn btn-link btn-lg">Our Services</a>
-                <a href="#about" class="btn btn-primary btn-lg">Our Projects</a>
-                <a href="#our-services" class="btn btn-link btn-lg">Reach Out</a>
-                <a href="#about" class="btn btn-primary btn-lg">Learn about LPG</a>
+                <a href="#projects" class="btn btn-primary btn-lg">Our Projects</a>
+                <a href="#contact" class="btn btn-link btn-lg">Reach Out</a>
+                <a href="#knowledge" class="btn btn-primary btn-lg">Learn about LPG</a>
             </div>
 
         </section>
@@ -236,7 +235,7 @@
         </section>
 
         <!-- Section - Our Services -->
-        <section id="our-services" class="section dark bg-primary">
+        <section id="our-services" class="section dark bg-background-img">
 
             <div class="container container-custom">
                 <h2>Our Services</h2>
@@ -378,7 +377,7 @@
         <section id="projects" class="section cover bg-black">
 
             <!-- Filter Bar -->
-            <nav class="filter-bar bg-primary dark">
+            <nav class="filter-bar bg-background-img dark">
                 <ul class="filter nav nav-tabs" data-filter-list="#works-list">
                     <li class="active"><a href="#" data-filter="*">
                             <p class="projects-add">Our Projects</p>
@@ -548,7 +547,7 @@
         </section>
 
         <!-- Section - Latest Posts -->
-        <section id="blog" class="section">
+        <section id="knowledge" class="section">
             <div class="container container-custom">
                 <h3 class="text-center mb-80">Latest Posts</h3>
                 <!-- Post / Item -->
@@ -559,7 +558,7 @@
                             <li>24 July, 2016</li>
                             <li>by Johnatan Doe</li>
                         </ul>
-                        <h4><a href="blog-post-vertical-light.html">How to find developer to your team?</a></h4>
+                        <h4><a href="knowledge-post-vertical-light.html">How to find developer to your team?</a></h4>
                         <p>Nulla leo lectus, commodo porttitor lacus a, placerat facilisis ligula.</p>
                     </div>
                 </article>
@@ -572,7 +571,7 @@
                                 <li>24 July, 2016</li>
                                 <li>by Johnatan Doe</li>
                             </ul>
-                            <h4><a href="blog-post-vertical-light.html">Crazy idea about the most popular search
+                            <h4><a href="knowledge-post-vertical-light.html">Crazy idea about the most popular search
                                     engine</a></h4>
                             <p>Nulla leo lectus, commodo porttitor lacus a, placerat facilisis ligula.</p>
                         </div>
@@ -586,12 +585,13 @@
                             <li>24 July, 2016</li>
                             <li>by Johnatan Doe</li>
                         </ul>
-                        <h4><a href="blog-post-vertical-light.html">Could Brexit trigger European stock crash?</a></h4>
+                        <h4><a href="knowledge-post-vertical-light.html">Could Brexit trigger European stock crash?</a>
+                        </h4>
                         <p>Nulla leo lectus, commodo porttitor lacus a, placerat facilisis ligula.</p>
                     </div>
                 </article>
                 <div class="text-center mt-60">
-                    <a href="blog-vertical-light.html" class="btn btn-primary">Go to my blog</a>
+                    <a href="knowledge-vertical-light.html" class="btn btn-primary">Read More</a>
                 </div>
             </div>
 
