--- a/Documentation/index.html
+++ b/Documentation/index.html
@@ -23,8 +23,7 @@
 
     <!-- CSS Styles -->
     <link rel="stylesheet" href="assets/css/styles.css" />
-    <link rel="stylesheet" href="assets/css-2/style.css">
-
+    <link rel="stylesheet" href="assets/css-2/project-carousel.css">
     <!-- CSS Theme -->
     <link id="theme" rel="stylesheet" href="assets/css/themes/theme-sans_serif-orange.css" />
 
