Updated index file

--- a/Documentation/index.html
+++ b/Documentation/index.html
@@ -54,6 +54,7 @@
                 <li><a href="#about"><i class="pe-7s-ribbon"></i><span>About Us</span></a></li>
                 <li><a href="#our-services"><i class="pe-7s-monitor"></i><span>Our Services</span></a></li>
                 <li><a href="#projects"><i class="pe-7s-comment"></i><span>Projects</span></a></li>
+                <li><a href="#team"><i class="pe-7s-copy-file"></i><span>Our Team</span></a></li>
                 <li><a href="#knowledge"><i class="pe-7s-copy-file"></i><span>Knowledge</span></a></li>
                 <li><a href="#contact"><i class="pe-7s-mail"></i><span>Contact Us</span></a></li>
             </ul>
@@ -659,10 +660,10 @@
         </section>
 
         <!-- Section - projects -->
-        <section id="projects" class="section bg-light">
+        <section id="team" class="section bg-light">
 
             <div class="container container-custom">
-                <h3 class="text-center mb-80">Our Team</h3>
+                <h3 class="text-center mb-20">Our Team</h3>
                 <div class="row masonry">
                     <div class="masonry-sizer col-sm-6 col-xs-12"></div>
                     <div class="masonry-item col-sm-6 col-xs-12">
