--- a/Documentation/index.html
+++ b/Documentation/index.html
@@ -21,6 +21,10 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700%7CPoppins:300,400,500,600"
         rel="stylesheet">
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
+
     <!-- CSS Styles -->
     <link rel="stylesheet" href="assets/css/styles.css" />
     <link rel="stylesheet" href="assets/css-2/project-carousel.css">
@@ -95,7 +99,11 @@
                 <a href="#projects" class="btn btn-primary btn-lg">Our Projects</a>
                 <a href="#contact" class="btn btn-link btn-lg">Reach Out</a>
                 <a href="#knowledge" class="btn btn-primary btn-lg">Learn about LPG</a>
+
             </div>
+            <div class="elfsight-app-4156245e-ed66-478b-a630-960acb8d3310 whatsapp"></div>
+
+
 
         </section>
 
@@ -861,6 +869,18 @@
 
     <!-- JS Google Map -->
     <script src="http://maps.google.com/maps/api/js"></script>
+
+    <!--Aisensy Whatsapp Widget-->
+    <!-- <script 
+      type="text/javascript"
+      src="https://d3mkw6s8thqya7.cloudfront.net/integration-plugin.js"
+      id="aisensy-wa-widget"
+      widget-id="sMMXbU"
+    >
+    </script> -->
+
+    <!--Elfsight Whatsapp Widget-->
+    <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
 
 </body>
 
