--- a/Documentation/index.html
+++ b/Documentation/index.html
@@ -11,11 +11,11 @@
     <title>Hessal | Hessal LPG Solutions</title>
 
     <!-- Favicons -->
-    <link rel="shortcut icon" href="assets/img/favicon.png">
-    <link rel="apple-touch-icon" href="assets/img/favicon_60x60.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="assets/img/favicon_76x76.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="assets/img/favicon_120x120.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="assets/img/favicon_152x152.png">
+    <link rel="shortcut icon" href="assets/img/Hessal-32.png">
+    <link rel="apple-touch-icon" href="assets/img/Hessal-60.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="assets/img/Hessal-76.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="assets/img/Hessal-120.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="assets/img/Hessal-152.png">
 
     <!-- Google Web Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700%7CPoppins:300,400,500,600"
