--- a/Documentation/index.html
+++ b/Documentation/index.html
@@ -719,22 +719,23 @@
                             <div class="col-lg-4">
                                 <div class="feature feature-1">
                                     <div class="icon"><span class="ti-desktop"></span></div>
-                                    <a href="#" class="h3 font-primary">example@sukces.com</a>
+                                    <a href="#" class="h3 font-primary">info@hessalsolutions.com</a>
                                 </div>
                             </div>
                             <div class="col-lg-4">
                                 <div class="feature feature-1">
                                     <div class="icon"><span class="ti-mobile"></span></div>
-                                    <a href="#" class="h3 font-primary"><small>+48</small> 123 561 672</a>
+                                    <a href="#" class="h3 font-primary"><small>+254</small> 706 547 003,
+                                        <small>+254</small> 714 585 382</a>
                                 </div>
                             </div>
                             <div class="col-lg-4">
                                 <div class="feature feature-1">
                                     <div class="icon"><span class="ti-location-arrow"></span></div>
                                     <address>
-                                        1111-A Nowhere Lane,<br>
-                                        Outta Sight, State 90378,<br>
-                                        USA
+                                        Westlands Lane,<br>
+                                        Westlands, Nairobi<br>
+                                        Kenya
                                     </address>
                                 </div>
                             </div>
@@ -742,7 +743,7 @@
                         <hr class="sep-line">
                         <div class="row">
                             <div class="col-sm-6">
-                                <h5 class="mt-5">Check my social media!</h5>
+                                <h5 class="mt-5">Check out our Social Media!</h5>
                             </div>
                             <div class="col-sm-6 text-right">
                                 <ul class="nav-icons">
