Added social media icons

--- a/Documentation/index.html
+++ b/Documentation/index.html
@@ -65,15 +65,6 @@
             <span class="selector"></span>
         </nav>
 
-        <!-- Bottom -->
-        <div class="bottom text-center">
-            <ul class="nav-icons nav-sm">
-                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-            </ul>
-        </div>
-
     </header>
     <!-- Header / End -->
 
@@ -101,10 +92,26 @@
                 <a href="#knowledge" class="btn btn-primary btn-lg">Learn about LPG</a>
 
             </div>
+
+            <!--Share on Social Media-->
+            <div class="vertical-panel-content">
+                <ul class="social-list">
+                    <li><a target="_blank" rel="noopener noreferrer" class="social-list-facebook"
+                            href="https://www.facebook.com/sharer/sharer.php?u=https://hessal.com/"><i
+                                class="fa fa-facebook"></i></a></li>
+                    <li><a target="_blank" rel="noopener noreferrer" class="social-list-whatsapp"
+                            href="whatsapp://send?text=We are Hessal Solutions, LPG Specialists and Installers.%20https://hessal.com/"><i
+                                class="fa fa-whatsapp"></i></a></li>
+                    <li><a target="_blank" rel="noopener noreferrer" class="social-list-twitter"
+                            href="https://twitter.com/intent/tweet?text=We are Hessal Solutions, LPG Specialists and Installers. https://hessal.com/"><i
+                                class="fa fa-twitter"></i></a></li>
+                    <li><a target="_blank" rel="noopener noreferrer" class="social-list-linkedin"
+                            href="https://www.linkedin.com/sharing/share-offsite/?url=https://hessal.com/"><i
+                                class="fa fa-linkedin"></i></a></li>
+                </ul>
+            </div>
+
             <div class="elfsight-app-4156245e-ed66-478b-a630-960acb8d3310 whatsapp"></div>
-
-
-
         </section>
 
         <!-- Section - about -->
@@ -719,7 +726,7 @@
                             <div class="col-lg-4">
                                 <div class="feature feature-1">
                                     <div class="icon"><span class="ti-desktop"></span></div>
-                                    <a href="#" class="h3 font-primary">info@hessalsolutions.com</a>
+                                    <a href="#" class="h3 font-primary">info@hessal.com</a>
                                 </div>
                             </div>
                             <div class="col-lg-4">
@@ -750,6 +757,7 @@
                                     <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                                     <li><a href="#"><i class="fa fa-twitter"></i></a></li>
                                     <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                                    <li><a href="#"><i class="fa fa-pinterest"></i></a></li>
                                 </ul>
                             </div>
                         </div>
