Added background image on landing page and reorganized files

--- a/Documentation/index.html
+++ b/Documentation/index.html
@@ -75,7 +75,7 @@
         <section id="home" class="section fullheight dark bg-dark">
 
             <!-- BG Image -->
-            <div class="bg-image bg-fixed"><img src="assets/img/photos/manager_bg01.jpg" alt=""></div>
+            <div class="bg-image bg-fixed"><img src="img/bg/Image-7.jpg" alt=""></div>
 
             <div class="container container-custom v-center" data-local-scroll>
                 <h1 class="text-lg mb-0">
@@ -84,7 +84,7 @@
                         </h1>
                     </div>
                 </h1>
-                <p class="lead text-muted">Liquefied Petroleum Gas (LPG) Installers & Specialists</p>
+                <p class="lead lead-color">Liquefied Petroleum Gas (LPG) Installers & Specialists</p>
                 <a href="#about" class="btn btn-primary btn-lg">Who we are?</a>
                 <a href="#our-services" class="btn btn-link btn-lg">Our Services</a>
                 <a href="#projects" class="btn btn-primary btn-lg">Our Projects</a>
