Landing page design completed

--- a/Documentation/index.html
+++ b/Documentation/index.html
@@ -48,7 +48,7 @@
 
         <!-- Photo -->
         <a href="index-vertical-light.html" class="photo">
-            <img src="assets/img/photos/manager_avatar.jpg" alt="">
+            <div class="nav-image"><img src="img/bg/Image-8.jpg" alt=""></div>
         </a>
 
         <!-- Navigation -->
@@ -64,6 +64,16 @@
             </ul>
             <span class="selector"></span>
         </nav>
+
+        <!-- Bottom -->
+        <div class="bottom text-center">
+            <img src="assets/img/Hessal-152.png" class="mb-30" alt="">
+            <ul class="nav-icons nav-sm">
+                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+            </ul>
+        </div>
 
     </header>
     <!-- Header / End -->
@@ -716,10 +726,11 @@
             <div class="container container-custom">
                 <div class="contact-box bg-primary dark animated" data-animation="fadeInDown"
                     data-animation-delay="500">
+
                     <div class="contact-box-content">
                         <div class="row">
                             <div class="col-md-6">
-                                <h2 class="mb-50"><em>Don’t hesitate to</em> contact me!</h2>
+                                <h2 class="mb-50"><em>Don’t hesitate to</em> contact us!</h2>
                             </div>
                         </div>
                         <div class="row">
