Project images updated

--- a/Documentation/index.html
+++ b/Documentation/index.html
@@ -404,9 +404,9 @@
             <div class="section-content">
                 <div class="projects-carousel js-projects-carousel js-projects-gallery">
                     <div class="project project-light">
-                        <a href="img/projects/DataCenter/Data-2.jpg" title="LPG Piping & Cylinders Installation">
+                        <a href="img/bg/projects/Image-14.jpg" title="LPG Piping & Cylinders Installation">
                             <figure>
-                                <img alt="" src="img/projects/DataCenter/Data-1.jpg">
+                                <img alt="" src="img/bg/Image-14_1.jpg">
                                 <figcaption>
                                     <h3 class="project-title">
                                         Chiromo Group Hospital<br>Branch 1
@@ -420,12 +420,12 @@
                         </a>
                     </div>
                     <div class="project project-light">
-                        <a href="img/projects/KMS/KMS-2.jpg" title="LPG Piping & Cylinders Installation">
+                        <a href="img/bg/projects/Image-9.jpg" title="LPG Piping & Cylinders Installation">
                             <figure>
-                                <img alt="" src="img/projects/KMS/KMS-1.jpg">
+                                <img alt="" src="img/bg/Image-9_1.jpg">
                                 <figcaption>
                                     <h3 class="project-title">
-                                        Chiromo Group Hospital<br>Branch 1
+                                        Chiromo Group Hospital<br>Branch 2
                                     </h3>
                                     <h4 class="project-category">
                                         LPG - Reticulation
@@ -436,9 +436,9 @@
                         </a>
                     </div>
                     <div class="project">
-                        <a href="img/projects/Apartments/APT-2.jpg" title="LPG Piping & Bulk Gas Tank Installations">
+                        <a href="img/bg/projects/Image-12.jpg" title="LPG Piping & Bulk Gas Tank Installations">
                             <figure>
-                                <img alt="" src="img/projects/Apartments/APT-1.jpg">
+                                <img alt="" src="img/bg/Image-12_1.jpg">
                                 <figcaption>
                                     <h3 class="project-title">
                                         Vincentian<br>Retreat Centre
@@ -452,9 +452,9 @@
                         </a>
                     </div>
                     <div class="project">
-                        <a href="img/projects/Kitchen/Dine-2.jpg" title="LPG Piping & Bulk Gas Tank Installations">
+                        <a href="img/bg/projects/Image-6.jpg" title="LPG Piping & Bulk Gas Tank Installations">
                             <figure>
-                                <img alt="" src="img/projects/Kitchen/Dine-1.jpg">
+                                <img alt="" src="img/bg/Image-6_1.jpg">
                                 <figcaption>
                                     <h3 class="project-title">
                                         Tilak Water <br>Tank Mouldings
@@ -470,15 +470,15 @@
 
 
                     <div class="project">
-                        <a href="img/projects/Arch-8.jpg" title="Domestic LPG Piping and Cylinder Installations">
+                        <a href="img/bg/projects/Image-11.jpg" title="Domestic LPG Piping and Cylinder Installations">
                             <figure>
-                                <img alt="" src="img/projects/Arch-81.jpg">
+                                <img alt="" src="img/bg/Image-11_1.jpg">
                                 <figcaption>
                                     <h3 class="project-title">
                                         Proposed Residential<br> Massionette
                                     </h3>
                                     <h4 class="project-category">
-                                        LPG - Domestic
+                                        LPG - Domestic Installation
                                     </h4>
                                     <div class="project-zoom"></div>
                                 </figcaption>
@@ -486,15 +486,15 @@
                         </a>
                     </div>
                     <div class="project">
-                        <a href="img/projects/Arch-9.jpg" title="Data Center - Arch. Visualization">
+                        <a href="img/bg/projects/Image-15.jpg" title="Commercial LPG Installation">
                             <figure>
-                                <img alt="" src="img/projects/Arch-91.jpg">
+                                <img alt="" src="img/bg/Image-15_1.jpg">
                                 <figcaption>
                                     <h3 class="project-title">
-                                        Project<br> Data Center
+                                        Domini<br> Pizza Inn
                                     </h3>
                                     <h4 class="project-category">
-                                        Interior Visualization
+                                        LPG - Commercial
                                     </h4>
                                     <div class="project-zoom"></div>
                                 </figcaption>
@@ -502,79 +502,15 @@
                         </a>
                     </div>
                     <div class="project">
-                        <a href="img/projects/PD-1.jpg" title="Residential Apartments - MEP">
+                        <a href="img/bg/projects/Image-13.jpg" title="Commercial LPG Installation">
                             <figure>
-                                <img alt="" src="img/projects/PD-11.jpg">
+                                <img alt="" src="img/bg/Image-13_1.jpg">
                                 <figcaption>
                                     <h3 class="project-title">
-                                        Project<br> Residential Apartments
+                                        Chogoria<br> Hospital
                                     </h3>
                                     <h4 class="project-category">
-                                        Plumbing & Drainage
-                                    </h4>
-                                    <div class="project-zoom"></div>
-                                </figcaption>
-                            </figure>
-                        </a>
-                    </div>
-                    <div class="project">
-                        <a href="img/projects/PD-2.jpg" title="Residential Apartments - MEP">
-                            <figure>
-                                <img alt="" src="img/projects/PD-21.jpg">
-                                <figcaption>
-                                    <h3 class="project-title">
-                                        Project<br> Residential Apartments
-                                    </h3>
-                                    <h4 class="project-category">
-                                        Plumbing & Drainage
-                                    </h4>
-                                    <div class="project-zoom"></div>
-                                </figcaption>
-                            </figure>
-                        </a>
-                    </div>
-                    <div class="project">
-                        <a href="img/projects/PD-3.jpg" title="Residential Apartments - MEP">
-                            <figure>
-                                <img alt="" src="img/projects/PD-31.jpg">
-                                <figcaption>
-                                    <h3 class="project-title">
-                                        Project<br> Residential Apartments
-                                    </h3>
-                                    <h4 class="project-category">
-                                        Plumbing & Drainage
-                                    </h4>
-                                    <div class="project-zoom"></div>
-                                </figcaption>
-                            </figure>
-                        </a>
-                    </div>
-                    <div class="project">
-                        <a href="img/projects/PD-4.jpg" title="Residential Apartments - MEP">
-                            <figure>
-                                <img alt="" src="img/projects/PD-41.jpg">
-                                <figcaption>
-                                    <h3 class="project-title">
-                                        Project<br> Residential Apartments
-                                    </h3>
-                                    <h4 class="project-category">
-                                        Plumbing & Drainage
-                                    </h4>
-                                    <div class="project-zoom"></div>
-                                </figcaption>
-                            </figure>
-                        </a>
-                    </div>
-                    <div class="project">
-                        <a href="img/projects/Evac-1.jpg" title="Warehouse - Fire Evacuation">
-                            <figure>
-                                <img alt="" src="img/projects/Evac-11.jpg">
-                                <figcaption>
-                                    <h3 class="project-title">
-                                        Project<br> Warehouse
-                                    </h3>
-                                    <h4 class="project-category">
-                                        Fire Evacuation Layout
+                                        LPG - Commercial
                                     </h4>
                                     <div class="project-zoom"></div>
                                 </figcaption>
