Updated blog pages

--- a/Documentation/index.html
+++ b/Documentation/index.html
@@ -302,7 +302,7 @@
 
                     <div class="masonry-item col-sm-6 col-xs-12">
                         <div class="about-card">
-                            <h3 class="mt-150">2. Smart Gas Leak Detection Systems</h3>
+                            <h3 class="mt-150">2. Smart Gas Meters and Leak Detection Systems</h3>
                             <div class="row">
                                 <p class="lead text-muted">
                                     Ensuring the safety of LPG gas pipe systems through early detection and
@@ -605,7 +605,7 @@
                             <li>25 January, 2023</li>
                             <li>by Samuel Karanja</li>
                         </ul>
-                        <h4><a href="knowledge-post-vertical-light.html">What is Liquefied Petroleum Gas?</a></h4>
+                        <h4><a href="blog/blog_what_is_lpg.html">What is Liquefied Petroleum Gas?</a></h4>
                         <p>Get to know what Liquefied Petroleum Gas is, its uses, and why its a preferred energy source.
                         </p>
                     </div>
@@ -640,7 +640,7 @@
                     </div>
                 </article>
                 <div class="text-center mt-60">
-                    <a href="knowledge-vertical-light.html" class="btn btn-primary">Read More</a>
+                    <a href="blog/blog.html" class="btn btn-primary">Read More</a>
                 </div>
             </div>
 
