--- a/Documentation/index.html
+++ b/Documentation/index.html
@@ -640,7 +640,7 @@
                     </div>
                 </article>
                 <div class="text-center mt-60">
-                    <a href="blog/blog.html" class="btn btn-primary">Read More</a>
+                    <a href="blog/blog_list_1.html" class="btn btn-primary">Read More</a>
                 </div>
             </div>
 
