--- a/Documentation/comment-section/vanilla js/comments.html
+++ b/Documentation/comment-section/vanilla js/comments.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="comments.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,19 +16,26 @@
 
 <body>
     <div class="container">
-        <form action="#" method="post" class="form">
-            <input type="text" class="name" name="user_name" placeholder="Name">
-            <br>
-            <textarea name="message" id="message" cols="30" rows="10" placeholder="Message"></textarea>
-            <br>
-            <button type="submit" class="btn" name="post_comments">Post Comment</button>
-        </form>
-    </div>
-    <div class="content">
-        <h1>John Doe</h1>
-        <p>He is one of the most active people I have ever seen.</p>
+        <div id="hdcomments">
+            <h3>Leave a Reply</h3>
+            <div id="hdc_create_comment">
+                <!--Comment Form-->
+                <label for="hdc_comment_input">Leave a comment</label>
+                <textarea name="comment" id="hdc_comment_input" cols="30" rows="10">Tell us what you think...</textarea>
+
+                <label for="hdc_email_input">Your email</label>
+                <input type="email" name="email">
+
+            </div>
+            <div id="hdc_comments">
+                <!--Show Existing Comments-->
+            </div>
+        </div>
+
 
     </div>
+
+    <script type="text/javascript" src="script.js"></script>
 
 </body>
 
