Comments section sample created

--- a/Documentation/comment-section/vanilla js/comments.html
+++ b/Documentation/comment-section/vanilla js/comments.html
@@ -25,11 +25,12 @@
                 <textarea name="comment" id="hdc_comment_input" cols="30" rows="10"
                     class="hdc_input">Tell us what you think...</textarea>
 
-                <label for="hdc_email_input" class="hdc_label">Your email</label>
-                <input type="email" name="email" id="hdc_email_input" class="hdc_input">
-
-                <label for="hdc_name_input" class="hdc_label">Your name</label>
-                <input type="text" name="name" id="hdc_name_input" class="hdc_input">
+                <div class="hdc_comment_contact">
+                    <label for="hdc_email_input" class="hdc_label">Your email</label>
+                    <input type="email" name="email" id="hdc_email_input" class="hdc_input">
+                    <label for="hdc_name_input" class="hdc_label">Your name</label>
+                    <input type="text" name="name" id="hdc_name_input" class="hdc_input">
+                </div>
 
             </div>
             <div id="hdc_comments">
