--- a/Documentation/index.html
+++ b/Documentation/index.html
@@ -64,9 +64,9 @@
         </nav>
 
         <!-- Bottom -->
-        <div class="bottom text-center">
+        <!-- <div class="bottom text-center">
             <img src="assets/img/Hessal-152.png" class="mb-30" alt="">
-        </div>
+        </div> -->
 
     </header>
     <!-- Header / End -->
