Revised script file

--- a/Documentation/comment-section/vanilla js/comments.html
+++ b/Documentation/comment-section/vanilla js/comments.html
@@ -33,7 +33,7 @@
 
                     <div>
                         <label for="hdc_name_input" class="hdc_label">Your name</label>
-                        <input type="text" name="name" id="hdc_name_input" class="hdc_input">
+                        <input type="text" name="user_name" id="hdc_name_input" class="hdc_input">
                     </div>
                 </div>
 
