--- a/Documentation/comment-section/vanilla js/comments.html
+++ b/Documentation/comment-section/vanilla js/comments.html
@@ -46,7 +46,7 @@
                         <span class="hdc_reaction" data-reaction="sad">😔</span>
                         <span class="hdc_reaction" data-reaction="love">🥰</span>
                     </div>
-                    <button id="hdc_submit" class="">Submit</button>
+                    <button id="hdc_submit" disabled="true" class="">Submit</button>
                 </div>
 
             </div>
