--- a/Documentation/comment-section/vanilla js/comments.html
+++ b/Documentation/comment-section/vanilla js/comments.html
@@ -22,8 +22,8 @@
             <div id="hdc_create_comment">
                 <!--Comment Form-->
                 <label for="hdc_comment_input" class="hdc_label">Leave a comment</label>
-                <textarea name="comment" id="hdc_comment_input" cols="30" rows="10"
-                    class="hdc_input">Tell us what you think...</textarea>
+                <textarea name="comment" id="hdc_comment_input" cols="30" rows="10" class="hdc_input"
+                    placeholder="Tell us what you think..."></textarea>
 
                 <div id="hdc_comment_contact">
                     <div>
