Added comments section

--- a/Documentation/comment-section/vanilla js/comments.html
+++ b/Documentation/comment-section/vanilla js/comments.html
@@ -51,7 +51,25 @@
 
             </div>
             <div id="hdc_comments">
-                <!--Show Existing Comments-->
+                <h3>Comments</h3>
+                <div class="hdcomment">
+                    <div class="hd_comment">
+                        <p>Lorem ipsum</p>
+                    </div>
+                    <div class="hdc_meta">
+                        <div class="hdc_meta_date_author">
+                            May 11th 2009
+                            <span class="hdc_meta_author">Godfrey</span>
+                        </div>
+                        <div class="hdc_vote">
+                            <span>+3</span>
+                            <div class="hdc_vote_options">
+                                <span></span>
+                                <span></span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
 
